--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
   --col_2: hsl(0, 0%, 95%);
   --col_3: hsl(0, 0%, 85%);
   --col_4: hsl(0, 0%, 41%);
-  --col_5: #FFC44F;
+  --col_5: hsl(40, 100%, 65%);
 }
 
 html,body {
@@ -38,7 +38,7 @@ header {
 
 main {
   width: 100%;
-  height: 90%;
+  height: clamp(700px, 90%, 2000px);
 }
 
 h1 {
@@ -46,20 +46,52 @@ h1 {
   font-weight: 900;
   text-align: center;
   text-transform: uppercase;
+
+  color: var(--col_4);
+}
+
+h2 {
+  font-size: 1.5em;
+  font-weight: 700;
+  text-align: center;
+
+  color: var(--col_4);
 }
 
 h4 {
   font-size: 1em;
   font-weight: 500;
   text-align: center;
+
+  color: var(--col_4);
 }
 
-@media screen and (max-width: 1000px) {
+a {
+  text-decoration: none;
+
+  color: black;
+}
+
+@media screen and (max-width: 700px) {
   h1 {
     font-size: 1.5em;
   }
 
+  h2 {
+    font-size: 1em;
+  }
+
   h4 {
     font-size: 0.8em;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  h1 {
+    font-size: 3em;
+  }
+
+  h2 {
+    font-size: 1.5em;
   }
 }
