--- a/src/components/page/plink/PLink.module.css
+++ b/src/components/page/plink/PLink.module.css
@@ -3,19 +3,20 @@
     flex-direction: column;
     align-items: center;
 
-    width: clamp(0px, 100%, 100px);
-    height: clamp(0px, 100%, 150px);
+    width: clamp(0px, 100%, 120px);
+    height: clamp(0px, 100%, 180px);
     
     padding: 5px;
     border: 1px solid transparent;
     border-radius: 10px;
 
+    font-size: 1.2em;
     text-decoration: none;
 
-    color: black;
+    color: var(--col_4);
 }
 .plink:hover {
-    border-color: black;
+    border-color: var(--col_4);
 }
 .plink:active {
 
