--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,7 +69,7 @@ h4 {
 a {
   text-decoration: none;
 
-  color: black;
+  color: var(--col_4);
 }
 
 @media screen and (max-width: 700px) {
@@ -86,7 +86,7 @@ a {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1800px) {
   h1 {
     font-size: 3em;
   }
