Primeira versão da calculadora de diferença de tempo terminada

--- a/src/components/tools/time-difference/input/Input.module.css
+++ b/src/components/tools/time-difference/input/Input.module.css
@@ -7,7 +7,7 @@
     width: clamp(0px, 40%, 380px);
     height: fit-content;
 
-    margin-bottom: 30px;
+    margin: 20px 0px;
 }
 
 .wrapper label {
