--- a/src/components/layout/header/nav/Nav.module.css
+++ b/src/components/layout/header/nav/Nav.module.css
@@ -1,6 +1,6 @@
 .nav {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: space-evenly;
     
     width: 190px;
