--- a/src/components/tools/time-difference/input/Input.module.css
+++ b/src/components/tools/time-difference/input/Input.module.css
@@ -14,7 +14,7 @@
     color: var(--col_4);
 }
 
-.input {
+.wrapper input {
     padding: 5px;
     border: 1px solid var(--col_4);
     border-radius: 10px;
@@ -27,10 +27,10 @@
 
     color: var(--col_4);
 }
-.input::-webkit-inner-spin-button {
+.wrapper input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
-.input::-webkit-outer-spin-button {
+.wrapper input::-webkit-outer-spin-button {
     -webkit-appearance: none;
 }
