Responsividade do conversor de unidades melhorada

--- a/src/components/tools/unit-converter/input/Input.Module.css
+++ b/src/components/tools/unit-converter/input/Input.Module.css
@@ -36,3 +36,11 @@
 .wrapper input::-webkit-outer-spin-button {
     -webkit-appearance: none;
 }
+
+@media screen and (max-width: 800px) {
+    .wrapper {
+        flex-direction: column;
+
+        margin: 0;
+    }
+}
