--- a/src/components/tools/unit-converter/input/unit-selection/UnitSelection.module.css
+++ b/src/components/tools/unit-converter/input/unit-selection/UnitSelection.module.css
@@ -1,5 +1,5 @@
 .selection {
-    width: clamp(0px, 100%, 221px);
+    width: fit-content;
 
     margin: 0px 20px;
 
@@ -9,4 +9,10 @@
     color: var(--col_4);
 
     cursor: pointer;
+}
+
+@media screen and (max-width: 800px) {
+    .selection {
+        margin-bottom: 3px;
+    }
 }
