--- a/src/components/page/t-link/TLink.module.css
+++ b/src/components/page/t-link/TLink.module.css
@@ -9,6 +9,7 @@
     padding: 5px;
     border: 1px solid transparent;
     border-radius: 10px;
+    margin: 0px 10px;
 
     font-size: 1em;
     text-align: center;
