--- a/src/components/layout/header/nav/Nav.module.css
+++ b/src/components/layout/header/nav/Nav.module.css
@@ -3,10 +3,13 @@
     align-items: center;
     justify-content: space-evenly;
     
-    width: 190px;
+    width: fit-content;
     height: 100%;
 }
 
+.nav a {
+    margin-top: 13px;
+}
 .nav a:hover {
     text-decoration: underline;
 }
